force-app/main/default/objects/PMC_CPQ_IntegrationSettings__mdt/PMC_CPQ_IntegrationSettings__mdt.object-meta.xml
<CustomObject>
    <description>This contains settings with respect to Integration.</description>
    <label>PMC CPQ Integration Settings</label>
    <pluralLabel>PMC CPQ Integration Settings</pluralLabel>
</CustomObject>