force-app/main/default/objects/PMC_CPQ_IntegrationSettings__mdt/fields/PMC_CPQ_Description__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Description__c</fullName>
    <description>Provides a description of a particular record in custom metadata.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>