force-app/main/default/objects/PMC_CPQ_IntegrationSettings__mdt/fields/PMC_CPQ_SettingName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SettingName__c</fullName>
    <description>This will contain the name of the setting.</description>
    <label>Setting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>