force-app/main/default/objects/PMC_CPQ_IntegrationSettings__mdt/fields/PMC_CPQ_SettingTwoValueNumber_c__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SettingTwoValueNumber_c__c</fullName>
    <label>PMC_CPQ_SettingTwoValueNumber__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>