force-app/main/default/objects/PMC_CPQ_IntegrationSettings__mdt/fields/PMC_CPQ_SettingValueLongTextArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SettingValueLongTextArea__c</fullName>
    <description>This is to store setting values that store long text area values.</description>
    <label>Setting Value Long Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>