force-app/main/default/objects/PMC_CPQ_IntegrationSettings__mdt/fields/PMC_CPQ_SettingValueNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SettingValueNumber__c</fullName>
    <description>This is to store setting values that are in number format.</description>
    <label>Setting Value Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>